--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -62,10 +62,10 @@
         $(".big_text1").bigtext();
         $(".big_text3").bigtext();
         $(".big_text4").bigtext();
+        $(".big_text5").bigtext();
         $(".subhero__recovered-text1").bigtext();
         $(".headline__big-text").css('opacity', '1');
         $(".headline__big-text2").css('opacity', '1');
-        $(".hablamos24__wrap").bigtext();
         $(".herolower__text").bigtext();
         $(".header__wrap .subhero__phone-num").bigtext();
         $(".section-header-right").css('visibility', 'visible');
