--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -60,9 +60,11 @@
 <script>
     $(window).on('load', function () {
         $(".big_text1").bigtext();
+        $(".big_text2").bigtext();
         $(".big_text3").bigtext();
         $(".big_text4").bigtext();
         $(".big_text5").bigtext();
+        $(".subhero__no-win-desktop-no-win-text").bigtext();
         $(".subhero__recovered-text1").bigtext();
         $(".headline__big-text").css('opacity', '1');
         $(".headline__big-text2").css('opacity', '1');
