--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -21,9 +21,10 @@
         </section>
       </div>
     </div>
+  </div>
 
     <!--tablet header -->
-    <div class="tablet header d-none d-md-flex">
+  <div class="container-fluid tablet header d-none d-md-flex">
       <section class="section-header-logo">
         <img data-src="{{ .Site.BaseURL }}img/wlf_long_white.svg" src=""
              class="img-fluid lazyload" alt="Wilshire Law Firm logo">
@@ -39,9 +40,6 @@
           <img src="" data-src="{{ .Site.BaseURL }}img/Chat_Widget.svg" class="img-fluid lazyload" alt="">
         </div>
       </div>
-
-    </div>
-
   </div>
 </div>
 <!-- header close -->
