--- a/site/layouts/partials/herolower.html
+++ b/site/layouts/partials/herolower.html
@@ -1,4 +1,4 @@
-<div class="herolower__wrap">
+<div class="herolower__wrap  d-none d-md-block d-lg-none">
     <div class="herolower mobile-column-wrap">
         <div class="herolower__leftblock ">
             <picture>
@@ -16,6 +16,54 @@
                 <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" type="image/jpg" class="img-fluid">
                 <img data-src="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" src="" class="img-fluid lazyload" alt="Best Lawyers Best Law Firms U.S. News and World Report 2020">
             </picture>
+        </div>
+    </div>
+</div>
+<div class="subhero__wrap d-none d-lg-block">
+    <div class="container-fluid u-remove-all-padding">
+        <div class="subhero">
+            <div class="subhero__as-seen-on">
+                <span>And recognized in</span>
+                <div class="subhero__as-seen-on-icons images-in-a-row">
+
+                    <div class="icon-latimes"></div>
+                    <div class="icon-ktla5"></div>
+                    <div class="icon-abc-black"></div>
+                    <div class="icon-cnbc"></div>
+                    <div class="icon-fox"></div>
+
+                </div>
+            </div>
+            <div class="subhero__border"></div>
+
+            <div class="subhero__no-win-desktop d-none d-md-flex">
+                <div class="subhero__no-win-desktop_block1">
+                    <div class="subhero__no-win-desktop-no-win-text"><span>NO LEGAL FEES</span><span>UNLESS YOU WIN</span>
+                    </div>
+                </div>
+                <div class="subhero__no-win-desktop_block2">
+
+                    <picture>
+                        <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.webp" type="image/webp" class="subhero__image-zero-fee img-fluid lazyload">
+                        <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.png" type="image/png" class="subhero__image-zero-fee img-fluid lazyload">
+                        <img data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.png" data-src="{{ .Site.BaseURL }}img/bestlawfirms-2020.png" class="subhero__image-zero-fee img-fluid lazyload">
+                    </picture>
+
+                </div>
+            </div>
+            <div class="subhero__border"></div>
+            <div class="subhero__recovered-desktop d-none d-md-block d-lg-none">
+                <span class="subhero__recovered-text1" style="display: block">
+                    <span class="subhero__recovered--break">MORE THAN</span><span class="subhero__recovered--break">$400M</span>
+                    <span>RECOVERED</span> <span class="subhero__recovered--break">FOR OUR CLIENTS</span>
+                </span>
+            </div>
+            <div class="subhero__recovered-desktop d-none d-md-none d-lg-block" style="width: 33%;">
+                <span class="subhero__recovered-text1" style="display: block">
+                    <span>MORE THAN $400M</span>
+                    <span>RECOVERED FOR OUR CLIENTS</span>
+                </span>
+            </div>
         </div>
     </div>
 </div>
